--- a/unmanaged/CanvasApps/src/mg_thesocialmediacollection_5c380/Src/Components/Toolbar.fx.yaml
+++ b/unmanaged/CanvasApps/src/mg_thesocialmediacollection_5c380/Src/Components/Toolbar.fx.yaml
@@ -254,6 +254,7 @@ Toolbar As CanvasComponent:
         
             Properties (Record):
                 A record property containing configurable properties like colours, typography etc.
+                More information on how theming works can be found here: https://github.com/sgtsnacks-64/SocialMediaKit-PPCL/blob/main/Theming.md
         
             Toolbar Properties (Record): 
                 Set properties specific to this component:
