--- a/unmanaged/CanvasApps/src/mg_thesocialmediacollection_5c380/Src/Components/Feed.fx.yaml
+++ b/unmanaged/CanvasApps/src/mg_thesocialmediacollection_5c380/Src/Components/Feed.fx.yaml
@@ -230,6 +230,68 @@ Feed As CanvasComponent:
                 }
             }
         }
+    ReadMe: |-
+        =/*
+        
+        ****Feed Component****
+        ****The Social Media Kit****
+        
+        Controls that can be overidden:
+        
+        + Gallery
+        + Label
+        + Image -- Only applies to User's Profile Image in Feed
+        + Label
+        
+        ====Inputs====
+        
+            Properties (Record):
+                A record property containing configurable properties like colours, typography etc.
+                More information on how theming works can be found here: https://github.com/sgtsnacks-64/SocialMediaKit-PPCL/blob/main/Theming.md
+        
+            Feed (Table): 
+                A table of the feed to show in the component:
+                **The Sample below can be copied and reused in this component**
+                    Table(
+                        {
+                            User: User(),                                       //String: The user record, mimicks the User() record from PowerApps, can be manually overridden
+                            Post: {                                             //Record: Record containing the post details
+                                Text: "This is my first post! 🤘 🦀",           //Text: Text portion of the post
+                                Image: [                                        //Table: Collection of Images from the post
+                                    {
+                                        ImageUrl: "https://domain.com/image",   //String: Image URL, will override "Image"
+                                        Image: SampleImage                      //Image: Post Image.
+                                    }
+                                ]
+                            },
+                            DateTime: DateAdd(                                  //DateTime: Date Time of the post
+                                Now(),
+                                -5,
+                                TimeUnit.Minutes
+                            ),
+                            TargetScreen: App.ActiveScreen                      //Control.Screen: If the post is selected, navigate to this screen.
+                        })
+        
+            Use Modern Theming (Boolean):
+                Define if Modern Theming will be used (true), or the theming as defined in the Properties record (false)
+                    
+            ReadMe:
+                The Contents of this ReadMe
+        
+        ====Outputs====
+        
+            Transcript Ouptut (Table):
+                A table of the Transcript
+                **Sample**
+                    Table(
+                        {
+                            MessageContent: ThisRecord.MessageContent,          //String: Message Content
+                            By: ThisRecord.User.Email,                          //String: Email address of the user who sent the message
+                            DateTime: ThisRecord.DateTime                       //DateTime: The Date/Time the message was sent
+                        })
+        
+        */
+    UseModernTheming: =true
     Width: =App.Width
     X: =0
     Y: =0
@@ -253,10 +315,10 @@ Feed As CanvasComponent:
             Image: =ThisItem.User.Image
             ImagePosition: =ImagePosition.Fill
             OnSelect: =Select(Parent)
-            RadiusBottomLeft: =100
-            RadiusBottomRight: =100
-            RadiusTopLeft: =100
-            RadiusTopRight: =100
+            RadiusBottomLeft: =Coalesce(Feed.Properties.Controls.Image.Style.Borders.Radius.BottomLeft, Feed.Properties.Style.Borders.Radius.BottomLeft)
+            RadiusBottomRight: =Coalesce(Feed.Properties.Controls.Image.Style.Borders.Radius.BottomRight, Feed.Properties.Style.Borders.Radius.BottomRight)
+            RadiusTopLeft: =Coalesce(Feed.Properties.Controls.Image.Style.Borders.Radius.TopLeft, Feed.Properties.Style.Borders.Radius.TopLeft)
+            RadiusTopRight: =Coalesce(Feed.Properties.Controls.Image.Style.Borders.Radius.TopRight, Feed.Properties.Style.Borders.Radius.TopRight)
             Width: =64
             X: =20
             Y: =16
